Updating all variable names to a new standard of prefixing each one with the role name

--- a/templates/000-default.conf
+++ b/templates/000-default.conf
@@ -8,9 +8,9 @@
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
        
-        ServerName {{server_fqdn}}
-        ServerAlias {{server_alias}}
-        Redirect permanent / https://{{server_fqdn}}/
+        ServerName {{apache_webserver_server_fqdn}}
+        ServerAlias {{apache_webserver_server_alias}}
+        Redirect permanent / https://{{apache_webserver_server_fqdn}}/
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
