--- a/templates/default-ssl.conf
+++ b/templates/default-ssl.conf
@@ -2,8 +2,8 @@
 	<VirtualHost *:443>
 		ServerAdmin webmaster@localhost
 
-        ServerName {{server_fqdn}}
-        ServerAlias {{server_alias}}
+        ServerName {{apache_webserver_server_fqdn}}
+        ServerAlias {{apache_webserver_server_alias}}
 	
         DocumentRoot /var/www/html
         <Directory /var/www/html/>
