--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
 # defaults file for apache-webserver
 
+# The PHP Version you are using with Apache2. The default value is "7.4"
+apache_webserver_php_version: "7.4"
