--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: "Installing Apache Webserver"
   apt: name={{ item }}
-  with_items: 
+  with_items:
   - apache2
 
 - name: "Making Directory for SSL Files"
@@ -29,13 +29,13 @@
       dest: /etc/apache2/ssl/ssl_certificate_file
       mode: '0640'
     - content: |
-        {{ apache_webserver_ssl_certificate_key_file }}       
+        {{ apache_webserver_ssl_certificate_key_file }}
       dest: /etc/apache2/ssl/ssl_certificate_key_file
       mode: '0640'
     - content: |
-        {{ apache_webserver_ssl_ca_certificate_file }}        
+        {{ apache_webserver_ssl_ca_certificate_file }}
       dest: /etc/apache2/ssl/ssl_ca_certificate_file
-      mode: '0640'      
+      mode: '0640'
 
 - name: "Adding Default Apache Config File"
   template: src=../templates/000-default.conf dest=/etc/apache2/sites-available/000-default.conf owner=www-data group=www-data mode=0644
@@ -59,5 +59,5 @@
   with_items:
      - ssl
      - rewrite
-  notify: 
-    - restart-apache
+#  notify:
+#    - restart-apache
